--- a/templates/examples.html
+++ b/templates/examples.html
@@ -29,5 +29,6 @@
         <img src="/static/images/3.jpg" style="width: auto; height: 200px;" alt="Пример работы 7">
     </div>
     <button onclick="location.href='{% url 'main1' %}'">На главную</button>
+<button onclick="location.href='{% url 'about' %}'">Следующая страница</button>
 </body>
 </html>
