--- a/templates/registration.html
+++ b/templates/registration.html
@@ -57,7 +57,10 @@
 
         <button type="submit">Зарегестироваться</button>
 
-        <button onclick="location.href='{% url 'main1' %}'">На главную</button>
+
+
     </form>
+    <button onclick="location.href='{% url 'main1' %}'">На главную</button>
+    <button onclick="location.href='{% url 'examples' %}'">Следующая страница</button>
 </body>
 </html>
