--- a/templates/main1.html
+++ b/templates/main1.html
@@ -33,7 +33,8 @@
     </style>
 </head>
 <body>
-    <h1>Главная страница</h1>
+    <h1>Duende</h1>
+    <h2>Ремонт квартир и офисов</h2>
     <nav>
         <ul>
             <li><a href="{% url 'main1' %}">Главная</a></li>
@@ -44,7 +45,6 @@
     </nav>
     <div><img src="/static/images/1.jpg" style="width: auto; height: 400px;"></div>
     <h2>Услуги</h2>
-    <p>Ремонт квартир и офисов.</p>
     <p>Косметический ремонт:</p>
     <ul>
         <li>Поменять розетки</li>
@@ -58,5 +58,6 @@
         <li>Провести сантехнику</li>
         <li>Положить/поменять полы</li>
     </ul>
+    <button onclick="location.href='{% url 'registration' %}'">Следующая страница</button>
 </body>
 </html>
